# bitly-cli

./: Makefile  README.md  pyproject.toml  setup.cfg
bitly_cli/: url_shortener.py
